--- a/LLM/Finetuning/story_scape.ipynb
+++ b/LLM/Finetuning/story_scape.ipynb
@@ -961,8 +961,8 @@
    "outputs": [],
    "source": [
     "evaluator = ModelEvaluator(\n",
-    "base_model_id=\"meta-llama/Llama-3.2-3B-Instruct\",  # Replace with your base model\n",
-    "fine_tuned_model_id=\"DevChopra/KathaVachak-Llama-3.2-3B\"  # Replace with your fine-tuned model\n",
+    "base_model_id=\"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "fine_tuned_model_id=\"DevChopra/KathaVachak-Llama-3.2-3B\"\n",
     ")"
    ]
   },
