adding further doc

--- a/LLM/Finetuning/story_scape.ipynb
+++ b/LLM/Finetuning/story_scape.ipynb
@@ -708,7 +708,7 @@
     }
    ],
    "source": [
-    "plot_stage_loss(stage1_logs, \"Stage 1 (Simple Stories)\")"
+    "plot_stage_loss(stage1_logs, \"Stage 1\")"
    ]
   },
   {
@@ -728,7 +728,7 @@
     }
    ],
    "source": [
-    "plot_stage_loss(stage2_logs, \"Stage 2 (Intermediate Stories)\")"
+    "plot_stage_loss(stage2_logs, \"Stage 2\")"
    ]
   },
   {
@@ -748,7 +748,7 @@
     }
    ],
    "source": [
-    "plot_stage_loss(stage3_logs, \"Stage 3 (Complex Stories)\")"
+    "plot_stage_loss(stage3_logs, \"Stage 3\")"
    ]
   },
   {
